[gd_scene load_steps=3 format=2]

[ext_resource path="res://System/Scenes/Cameras/FreeCamera.gd" type="Script" id=1]
[ext_resource path="res://System/Textures/ui/Icons/camera_screenshot.png" type="Texture" id=2]

[node name="FreeCamera" type="KinematicBody"]
pause_mode = 2
visible = false
input_ray_pickable = true
input_capture_on_drag = false
collision_layer = 1
collision_mask = 1
axis_lock_linear_x = false
axis_lock_linear_y = false
axis_lock_linear_z = false
axis_lock_angular_x = false
axis_lock_angular_y = false
axis_lock_angular_z = false
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Pause", "Pickable", "Transform", "Visibility", "collision" ]

[node name="RotationGimball" type="Spatial" parent="." index="0"]

[node name="Camera" type="Camera" parent="RotationGimball" index="0"]
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 70.0
size = 1.0
near = 0.05
far = 350.0

[node name="CanvasLayer" type="CanvasLayer" parent="." index="1"]
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="FreeCameraMenu" type="Panel" parent="CanvasLayer" index="0"]
self_modulate = Color( 1, 1, 1, 0.392157 )
anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_top = -277.0
margin_right = 367.0
margin_bottom = 277.0
grow_horizontal = 0
rect_min_size = Vector2( 367, 76 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 4
size_flags_vertical = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Mouse", "Rect", "Size Flags", "Theme", "Visibility", "custom_styles" ]

[node name="HintTextLabel" type="Label" parent="CanvasLayer/FreeCameraMenu" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -14.0
margin_right = 58.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Hint Text"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ScrollContainer" type="ScrollContainer" parent="CanvasLayer/FreeCameraMenu" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 11.0
margin_top = 11.0
margin_right = 354.0
margin_bottom = 545.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
scroll_horizontal_enabled = false
scroll_horizontal = 0
scroll_vertical_enabled = true
scroll_vertical = 0
scroll_deadzone = 0
_sections_unfolded = [ "Scroll" ]

[node name="Container" type="VBoxContainer" parent="CanvasLayer/FreeCameraMenu/ScrollContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 2.0
margin_top = 2.0
margin_right = 342.0
margin_bottom = 346.0
rect_min_size = Vector2( 340, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Rect" ]

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="ScreenshotButton" type="Button" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/CenterContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 106.0
margin_right = 233.0
margin_bottom = 72.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Capture"
icon = ExtResource( 2 )
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Grow Direction", "Margin", "Material", "Rect", "Visibility" ]

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 76.0
margin_right = 340.0
margin_bottom = 80.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="FOVContainer" type="VBoxContainer" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 84.0
margin_right = 340.0
margin_bottom = 140.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor" ]

[node name="Label" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/FOVContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "FOV"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FOVLabel" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/FOVContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 340.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "90"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="FOVSlider" type="HSlider" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/FOVContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 340.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2
_sections_unfolded = [ "Mouse" ]

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="3"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 144.0
margin_right = 340.0
margin_bottom = 148.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="RollContainer" type="VBoxContainer" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="4"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 152.0
margin_right = 340.0
margin_bottom = 208.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Label" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/RollContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Roll"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RollLabel" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/RollContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 340.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "90"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="RollSlider" type="HSlider" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/RollContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 340.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = -180.0
max_value = 180.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="VSeparator2" type="HSeparator" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="5"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 212.0
margin_right = 340.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="DofDistanceContainer" type="VBoxContainer" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="6"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 220.0
margin_right = 340.0
margin_bottom = 276.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Label" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofDistanceContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Focus Distance"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DofDistanceLabel" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofDistanceContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 340.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "90"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DofDistanceSlider" type="HSlider" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofDistanceContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 340.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 50.0
step = 0.1
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[node name="HSeparator3" type="HSeparator" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="7"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 280.0
margin_right = 340.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="DofStrengthContainer" type="VBoxContainer" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container" index="8"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 288.0
margin_right = 340.0
margin_bottom = 344.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="Label" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofStrengthContainer" index="0"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 340.0
margin_bottom = 22.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Focus Strength"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DofStrengthLabel" type="Label" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofStrengthContainer" index="1"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 340.0
margin_bottom = 48.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "0.5"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="DofStrengthSlider" type="HSlider" parent="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofStrengthContainer" index="2"]
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 52.0
margin_right = 340.0
margin_bottom = 56.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
min_value = 0.0
max_value = 1.0
step = 0.05
page = 0.0
value = 0.0
exp_edit = false
rounded = false
allow_greater = false
allow_lesser = false
editable = true
scrollable = true
tick_count = 0
ticks_on_borders = false
focus_mode = 2

[connection signal="mouse_entered" from="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/CenterContainer/ScreenshotButton" to="." method="mouse_entered_bar_button" binds= [ "Take a screenshot" ]]
[connection signal="mouse_exited" from="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/CenterContainer/ScreenshotButton" to="." method="mouse_existed_bar_button"]
[connection signal="pressed" from="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/CenterContainer/ScreenshotButton" to="." method="take_screenshot"]
[connection signal="value_changed" from="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/FOVContainer/FOVSlider" to="." method="change_fov"]
[connection signal="value_changed" from="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofDistanceContainer/DofDistanceSlider" to="." method="change_dof_distance"]
[connection signal="value_changed" from="CanvasLayer/FreeCameraMenu/ScrollContainer/Container/DofStrengthContainer/DofStrengthSlider" to="." method="change_dof_strength"]
